# speechdown

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  TODO.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  claude.yml
docs/: README.md
docs/adrs/: 002_unit_test_structure.md  004_testing_library.md  005_integration_test_structure.md  006_task_tracking_approach.md  007_transcription_caching_architecture.md  009_consolidating_transcription_storage.md  README.md
docs/ai/: AI-rules.md  README.md  ai-collaborators.md
docs/deployment/: cron-automation.md
docs/diagrams/: architecture_overview.md  ports_and_adapters.md
docs/notes/: active.md  ar.md
docs/planning/: roadmap.md  vision.md
docs/research/: 2024-07-12-audio-filename-timestamps.md  2024-07-12-audio-metadata-timestamps.md  2025-05-31-audio-filename-timestamps.md  2025-05-31-audio-metadata-timestamps.md  2025-06-03-copilot-jules-claude-rules.md  2025-10-04-auto-transcribe-watcher.md
graphics/: README.md  logo.drawio  logo_color_history.md
scripts/: generate_ai_rules.py  list_latest_transcriptions.py  test_audio_metadata.py
scripts/2024-07-12-audio-filename-timestamps/: README.md  gather_filenames.py
scripts/2024-07-12-audio-metadata-timestamps/: README.md
scripts/2025-05-31-audio-filename-timestamps/: .example.env  README.md  list_audio_files.py  parse_filenames_all.py  parse_filenames_backwards.py  parse_filenames_first_iteration.py  prompts.md
scripts/2025-05-31-audio-metadata-timestamps/: README.md  extract_metadata_timestamps.py
scripts/2025-06-03-copilot-jules-claude-rules/: README.md
scripts/2025-07-01-db-migration/: README.md  rename_created_at.py
scripts/2025-10-04-auto-transcribe-watcher/: README.md  com.speechdown.watcher.plist.template  install.sh  install_watchdog.sh  uninstall.sh  uninstall_watchdog.sh  watchdog.sh  watcher.sh
sql/: list_tables.sql  list_transcriptions.sql
src/speechdown/: main.py
tests/: conftest.py  debug.py  validate.py
tests/data/: README.md  test-ru.m4a  test-ua.m4a
tests/integration/: README.md  (+1 more)
(+77 files in other folders)
