[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speechdown"
version = "0.2.3"
description = "A CLI tool for transcribing audio files in multiple languages."
authors = [{ name = "Artem Dudarev", email = "dudarev@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "openai-whisper==20240930",
]

[project.scripts]
sd = "speechdown.main:cli"

[project.optional-dependencies]
testing = ["pytest", "ruff", "mypy", "pytest-cov", "python-dotenv",]

[tool.ruff]
line-length = 100
fix = true

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["speechdown"]
